# mcdonalds-drive-thru-bot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  Makefile-old  README copy.md  README.md  langgraph.json  pyproject.toml
.claude/: settings.local.json
.claude/agents/: bdd-scenario-writer.md
.claude/commands/: commit-push-pr.md  commit.md  convert_to_substack.md  create_plan.md  implement_plan.md  iterate_plan.md  prune_branches.md  review_plan.md
.claude/skills/analyze-git-contributions/: README.md  SKILL.md
.claude/skills/analyze-git-contributions/scripts/: batch-extract-commits.sh  cache-manage.sh  calculate-time-segments.sh  collect-user-commits.sh  count-user-commits.sh  extract-commit-details.sh  fast-extract-commits.sh  sample-commits.sh
.claude/skills/analyze-git-contributions/templates/: gitignore-entry.txt
.claude/skills/analyze-git-contributions/tests/: test-batch-extract.sh
.claude/skills/architecting-systems/: SKILL.md
.claude/skills/changelog-generator/references/: CHANGELOG_STYLE.md
.claude/skills/makefile/: SKILL.md
.claude/skills/makefile/references/: Makefile
.claude/skills/review-plan/: SKILL.md
.claude/skills/writing-plans/: SKILL.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/: retries-rate-limits.md
docs/architecture/: architecture.md
docs/architecture/architecture-decisions/: 001-llm-orchestrator-pattern.md  002-minimal-state-schema.md  003-pure-function-tools-with-state-bridge.md  004-domain-model-operator-overloading.md  005-runtime-prompt-compilation.md  006-full-menu-in-system-prompt.md  007-lazy-llm-initialization.md  008-reasoning-tag-extraction.md  009-langfuse-v3-observability.md  010-pydantic-settings-configuration.md  011-uv-workspace-structure.md  012-dual-graph-compilation.md  adr.md
docs/blogs/: building-a-drive-thru-chatbot-with-langgraph-v2.md  building-a-drive-thru-chatbot-with-langgraph-v3.md  building-a-drive-thru-chatbot-with-langgraph.md
docs/blogs/building-a-drive-thru-chatbot-with-langgraph/memes/: generate_memes.py
docs/blogs/images/: render_diagrams.py
docs/blogs/memes/: meme-ideas.md
docs/blogs/performing-evals-with-langfuse-and-langgraph/: blog-v1.md  blog-v2-substack.md  blog-v2.md  meme-ideas.md
docs/blogs/performing-evals-with-langfuse-and-langgraph/memes/: generate_memes.py
docs/evaluations/: langfuse-evaluations-tutorial.md
docs/graveyard/: README_draft_1.md  README_draft_2.md  README_draft_3.md  README_v2.md  README_v3.md
docs/langfuse-generated-documentation/: python-sdk-outline.md
docs/plans/executed-plans/2026-02-10-v1-orchestrator/: 02-tools.md  03-graph.md
docs/thoughts/.claude/: settings.local.json
docs/thoughts/target-implementation/v1/: context-and-state-management-v1.md  langgraph-state-design-v1.md  langgraph-state-diagrams-v1.md
menus/transformed-data/: mcdonalds-menu-items-revised-full.csv  menu-v1.json
plan/executed-plans/: 2026-02-05-v0-stage-1-simple-chatbot-executed-plan.md
plan/future-plans/: 2026-02-06-stage-2-two-bot-interview.md  2026-02-11-add-reasoning-to-state.md  2026-02-11-langfuse-evaluation-dataset-and-experiments.md
plan/future-plans/2026-02-10-v1-orchestrator/: 01-foundation.md  02-tools.md  03-graph.md  04-cli-langfuse.md  05-smoke-test.md  README.md  REVIEW.md
plan/plans/executed-plans/2026-02-10-v1-orchestrator/: 01-foundation.md  04-cli-langfuse.md  05-smoke-test.md  README.md
plan/plans/executed-plans/2026-02-10-v1-orchestrator/thoughts/v1/: langgraph-state-diagrams-v1.md  testing-ideas-v1.md
plan/thoughts/target-implementation/v0/: langfuse-evaluation-v0.md  multi-stage-project-options.md
plan/thoughts/uv-workspace/: uv-workspace-structure.md
planning-docs/thoughts/: langgraph-state-design-v0.md  prompt-optimization-tools-v0.md
planning-docs/thoughts/evaluation-blog-thoughts/: blog-outline-v1.md  blog-outline-v2.md
planning-docs/thoughts/target-implementation/: context-and-state-management-v1.md
planning-docs/thoughts/target-implementation/v0/: langfuse-prompt-management-v0.md
plans/: 2026-02-01-csv-to-json-transformation.md  2026-02-02-llamaindex-drive-thru-implementation-detailed.md  2026-02-11-langgraph-testing.REVIEW.md  2026-02-11-langgraph-testing.md
scripts/: convert_to_substack.py  run_eval.py  seed_eval_dataset.py  seed_langfuse_prompts.py
src/: enums.py  models.py
src/orchestrator/: pyproject.toml
src/orchestrator/orchestrator/: __init__.py  __main__.py  config.py  graph.py  logging.py  main.py  models.py  tools.py
src/stage_1/: README.md  config.py  graph.py  main.py
src/stage_2/: README.md
src/stage_2/stage_2/: main.py
src/stage_3/: enums.py  models.py
tests/orchestrator/: conftest.py  test_smoke.py
thoughts/memes/: claude-meme-tools-research.md
thoughts/stage-2/: two-bot-interview-design.md
thoughts/v0-target-full-implementation-after-all-stages/: langfuse-observability-v0.md  langgraph-retries-rate-limits-v0.md  langgraph-state-diagrams-v0.md
