[project]
name = "mcdonalds-voice-ai"
version = "0.1.0"
description = "McDonald's breakfast menu drive-thru voice ordering system"
requires-python = ">=3.12"
dependencies = []

# No [build-system] — root is not installable, just a workspace coordinator

[tool.uv.workspace]
members = ["src/stage_*"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.12",
    "langgraph-sdk>=0.3.3",
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
    "ty>=0.0.15",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.src]
include = ["src/stage_1", "src/stage_2", "src/stage_3"]

[tool.ty.environment]
python-version = "3.12"
