[project]
name = "orchestrator"
version = "0.1.0"
description = "LLM Orchestrator Pattern for McDonald's drive-thru chatbot ordering system"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.9",
    "langchain-core>=1.2.9",
    "langchain-mistralai>=1.1.1",
    "langfuse>=3.12.1",
    "langgraph>=1.0.7",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ty>=0.0.15",
]
