[project]
name = "orchestrator"
version = "0.1.0"
description = "LLM Orchestrator Pattern for McDonald's drive-thru chatbot ordering system"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.9",
    "langchain-core>=1.2.9",
    "langchain-mistralai>=1.1.1",
    "langfuse>=3.12.1",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "opentelemetry-distro>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-asyncio==0.60b1",
    "opentelemetry-instrumentation>=0.60b1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "opentelemetry-instrumentation-dbapi==0.60b1",
    "opentelemetry-instrumentation-logging==0.60b1",
    "opentelemetry-instrumentation-sqlite3==0.60b1",
    "opentelemetry-instrumentation-threading==0.60b1",
    "opentelemetry-instrumentation-urllib==0.60b1",
    "opentelemetry-instrumentation-wsgi==0.60b1",
    "opentelemetry-instrumentation-openai-v2>=2.3b0",
    "opentelemetry-instrumentation-click==0.60b1",
    "opentelemetry-instrumentation-grpc==0.60b1",
    "opentelemetry-instrumentation-httpx==0.60b1",
    "opentelemetry-instrumentation-requests==0.60b1",
    "opentelemetry-instrumentation-starlette==0.60b1",
    "opentelemetry-instrumentation-tortoiseorm==0.60b1",
    "opentelemetry-instrumentation-urllib3==0.60b1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ty>=0.0.15",
]
